# btmux-src

./: .hgignore  CMakeLists.txt  ChangeLog  autoconf.h.in  autoconfig.h.in
btech/: CMakeLists.txt  autoconf.h.in
btech/btfi/: CMakeLists.txt
btech/btpr/: CMakeLists.txt  netcommon.c
btech/src/: CMakeLists.txt  coolmenu.c  glue.c  glue.scode.c
btech/src/btech/: aero.move.c  autopilot_autogun.c  btechstats.c  btmacros.h  crit.c  map.c  map.conditions.c  map.los.c  map.obj.c  map.weather.c  mech.advanced.c  mech.combat.missile.c  mech.consistency.c  mech.damage.c  mech.events.c  mech.los.c  mech.notify.c  mech.sensor.c  mech.spot.c  mech.stat.c  mech.tech.commands.c  mech.tech.damages.c  mech.update.c  mech.utils.c  mechrep.c  p.mech.consistency.h  p.mech.update.h  template.c  weapons.h
btech/src/include/: glue.h  p.mech.lostracer.h
cmake/Modules/: FindAWK.cmake  FindGeoIP.cmake  FindIconv.cmake  FindInstall.cmake  FindLibCrypt.cmake  GenConfigH.cmake
muxpy-lib/: mux.py
src/: CMakeLists.txt  command.c  comsys.c  conf.c  config.h  db.c  db.h  db_xdr.c  dllist.c  externs.h  file_c.c  funceval.c  functions.c  game.c  log.c  macro.h  mail.c  match.c  mmdb.c  mmdb.h  mx_python.c  mx_python.h  netcommon.c  p.comsys.h  set.c  timer.c  version.c  version.h
